Fix navigation links for GitHub Pages

--- a/output/home/index.html
+++ b/output/home/index.html
@@ -290,16 +290,16 @@
   <a href="#main-content" class="skip-link">Saltar al contenido principal</a>
 
   <nav class="nav" role="navigation" aria-label="Navegación principal">
-    <a href="../home/index.html" class="nav-logo" aria-label="Saptiva - Inicio">
+    <a href="../home/" class="nav-logo" aria-label="Saptiva - Inicio">
       <img src="assets/saptiva-logo.png" alt="Saptiva AI" style="height: 28px; width: auto;">
     </a>
     <ul class="nav-links">
-      <li><a href="../home/index.html" class="nav-link">Home</a></li>
+      <li><a href="../home/" class="nav-link">Home</a></li>
       <li class="nav-dropdown">
         <a href="#" class="nav-link nav-dropdown-toggle">Industrias <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="6 9 12 15 18 9"/></svg></a>
         <ul class="nav-dropdown-menu">
-          <li><a href="../financial-services/index.html">Financial Services</a></li>
-          <li><a href="../gobierno/index.html">Gobierno</a></li>
+          <li><a href="../financial-services/">Servicios Financieros</a></li>
+          <li><a href="../gobierno/">Gobierno</a></li>
         </ul>
       </li>
     </ul>
@@ -345,7 +345,7 @@
         </p>
 
         <div class="industries-grid">
-          <a href="../financial-services/index.html" class="industry-card">
+          <a href="../financial-services/" class="industry-card">
             <span class="industry-tag">Servicios Financieros</span>
             <h3>Resultados en 2 semanas</h3>
             <p>Soluciones plug and play que ya funcionan en otras instituciones. Resultados antes del siguiente comité, no planes de 12 meses.</p>
@@ -355,7 +355,7 @@
             </span>
           </a>
 
-          <a href="../gobierno/index.html" class="industry-card">
+          <a href="../gobierno/" class="industry-card">
             <span class="industry-tag">Gobierno</span>
             <h3>IA Soberana</h3>
             <p>Control total sobre tus datos e infraestructura. Cumplimiento regulatorio garantizado. Sin dependencia de proveedores extranjeros.</p>
