--- a/output/gobierno/index.html
+++ b/output/gobierno/index.html
@@ -338,16 +338,16 @@
   <a href="#main-content" class="skip-link">Saltar al contenido principal</a>
 
   <nav class="nav" role="navigation" aria-label="Navegación principal">
-    <a href="../home/index.html" class="nav-logo" aria-label="Saptiva - Inicio">
+    <a href="../home/" class="nav-logo" aria-label="Saptiva - Inicio">
       <img src="assets/saptiva-logo.png" alt="Saptiva AI" style="height: 28px; width: auto;">
     </a>
     <ul class="nav-links">
-      <li><a href="../home/index.html" class="nav-link">Home</a></li>
+      <li><a href="../home/" class="nav-link">Home</a></li>
       <li class="nav-dropdown">
         <a href="#" class="nav-link nav-dropdown-toggle">Industrias <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="6 9 12 15 18 9"/></svg></a>
         <ul class="nav-dropdown-menu">
-          <li><a href="../financial-services/index.html">Financial Services</a></li>
-          <li><a href="../gobierno/index.html">Gobierno</a></li>
+          <li><a href="../financial-services/">Servicios Financieros</a></li>
+          <li><a href="../gobierno/">Gobierno</a></li>
         </ul>
       </li>
     </ul>
