Add demo form page, replace Calendly links

--- a/output/financial-services/index.html
+++ b/output/financial-services/index.html
@@ -993,7 +993,7 @@
       </li>
     </ul>
     <div class="nav-cta">
-      <a href="https://calendly.com/saptiva/demo" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
+      <a href="../demo/" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
         Agenda una demo
       </a>
     </div>
@@ -1014,7 +1014,7 @@
               Soluciones plug and play que ya funcionan en otras instituciones. Resultados antes del siguiente comité, no planes de 12 meses.
             </p>
             <div class="hero-cta">
-              <a href="https://calendly.com/saptiva/demo" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
+              <a href="../demo/" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
                 Empieza en 2 semanas
               </a>
             </div>
@@ -1255,7 +1255,7 @@
           Agenda una llamada con nuestro equipo y descubre cómo acelerar tus resultados.
         </p>
         <div class="cta-buttons">
-          <a href="https://calendly.com/saptiva/demo" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
+          <a href="../demo/" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
             Empieza en 2 semanas
           </a>
         </div>
