--- a/output/gobierno/index.html
+++ b/output/gobierno/index.html
@@ -352,7 +352,7 @@
       </li>
     </ul>
     <div class="nav-cta">
-      <a href="https://calendly.com/saptiva/demo" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
+      <a href="../demo/" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
         Agenda una demo
       </a>
     </div>
