--- a/output/home/index.html
+++ b/output/home/index.html
@@ -304,7 +304,7 @@
       </li>
     </ul>
     <div class="nav-cta">
-      <a href="https://calendly.com/saptiva/demo" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
+      <a href="../demo/" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
         Agenda una demo
       </a>
     </div>
@@ -323,7 +323,7 @@
             Lleva casos de uso de IA a producción en semanas, no meses. Con control total sobre tus datos y tu infraestructura.
           </p>
           <div class="hero-cta">
-            <a href="https://calendly.com/saptiva/demo" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
+            <a href="../demo/" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
               Agenda una demo
             </a>
             <a href="#industrias" class="btn btn-secondary">
@@ -416,7 +416,7 @@
           Agenda una llamada con nuestro equipo y descubre cómo podemos ayudarte.
         </p>
         <div class="cta-buttons">
-          <a href="https://calendly.com/saptiva/demo" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
+          <a href="../demo/" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
             Agenda una demo
           </a>
         </div>
