--- a/output/demo/index.html
+++ b/output/demo/index.html
@@ -251,10 +251,10 @@
 <body>
   <div class="container">
     <div class="left-content">
-      <h1>We are ready to assist you</h1>
-      <p class="tagline">Let's talk AI.</p>
+      <h1>Estamos listos para ayudarte</h1>
+      <p class="tagline">Hablemos de IA.</p>
       <p class="description">
-        Whether you're building, scaling, or integrating AI, we'd love to help. Drop us a message and let's explore what's possible.
+        Ya sea que estés construyendo, escalando o integrando IA, nos encantaría ayudarte. Escríbenos y exploremos juntos lo que es posible.
       </p>
       <p class="email">hi@saptiva.com</p>
     </div>
@@ -262,22 +262,22 @@
     <div class="form-card">
       <form id="demo-form" class="form-content">
         <div class="form-group">
-          <label for="name">Name</label>
+          <label for="name">Nombre</label>
           <input type="text" id="name" name="name" required>
         </div>
 
         <div class="form-group">
-          <label for="lastname">Last name</label>
+          <label for="lastname">Apellido</label>
           <input type="text" id="lastname" name="lastname" required>
         </div>
 
         <div class="form-group">
-          <label for="email">Business Email</label>
+          <label for="email">Correo corporativo</label>
           <input type="email" id="email" name="email" required>
         </div>
 
         <div class="form-group">
-          <label for="phone">Phone number</label>
+          <label for="phone">Teléfono</label>
           <div class="phone-input-wrapper">
             <select class="country-select" id="country-code" name="country_code">
               <option value="+52">🇲🇽 +52</option>
@@ -293,11 +293,11 @@
         </div>
 
         <div class="form-group">
-          <label for="company">Company Name</label>
+          <label for="company">Empresa</label>
           <input type="text" id="company" name="company" required>
         </div>
 
-        <button type="submit" class="btn-submit">Send</button>
+        <button type="submit" class="btn-submit">Enviar</button>
       </form>
 
       <div class="success-message" id="success-message">
