Point all CTAs to demo form

--- a/output/gobierno/index.html
+++ b/output/gobierno/index.html
@@ -372,7 +372,7 @@
               Control total sobre tus datos e infraestructura. Cumplimiento regulatorio garantizado. Sin dependencia de proveedores extranjeros.
             </p>
             <div class="hero-cta">
-              <a href="https://calendly.com/saptiva/arquitectura" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
+              <a href="../demo/" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
                 Sesión de arquitectura
               </a>
               <a href="#requisitos" class="btn btn-secondary">
@@ -543,7 +543,7 @@
           Agenda una sesión de arquitectura con nuestro equipo para evaluar cómo cumplir los 7 requisitos en tu contexto.
         </p>
         <div class="cta-buttons">
-          <a href="https://calendly.com/saptiva/arquitectura" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
+          <a href="../demo/" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
             Sesión de arquitectura
           </a>
         </div>
