Add LATAM isometric map asset for gobierno hero

--- a/output/gobierno/index.html
+++ b/output/gobierno/index.html
@@ -381,7 +381,7 @@
             </div>
           </div>
           <div class="hero-visual">
-            <img src="assets/design-1768709364637.svg" alt="IA Soberana - Control Total de Datos" loading="eager">
+            <img src="assets/latam-sovereign-map.svg" alt="IA Soberana para Latinoamérica" loading="eager">
           </div>
         </div>
       </div>
