Use correct LATAM isometric map asset

--- a/output/gobierno/index.html
+++ b/output/gobierno/index.html
@@ -381,7 +381,7 @@
             </div>
           </div>
           <div class="hero-visual">
-            <img src="assets/latam-sovereign-map.svg" alt="IA Soberana para Latinoamérica" loading="eager">
+            <img src="assets/latam-map.png" alt="IA Soberana para Latinoamérica" loading="eager">
           </div>
         </div>
       </div>
