Add hero asset for financial services

--- a/output/financial-services/index.html
+++ b/output/financial-services/index.html
@@ -1020,7 +1020,7 @@
             </div>
           </div>
           <div class="hero-visual">
-            <img src="assets/hero-visual.svg" alt="Plataforma de IA Saptiva" loading="eager">
+            <img src="assets/hero-financial.png" alt="Plataforma de IA para Servicios Financieros" loading="eager">
           </div>
         </div>
       </div>
